# ASR_D

./: .editorconfig  .env.example  .gitattributes  .gitignore  CODE_REVIEW.md  GITHUB_ABOUT.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  setup.ps1  setup.sh
src/asr_cli/: __init__.py  __main__.py
src/asr_cli/cli/: __init__.py  main.py  progress.py  runtime.py
src/asr_cli/core/: __init__.py  config.py  enums.py  errors.py  models.py  progress.py  registry.py
src/asr_cli/io/: __init__.py  ffmpeg.py  inputs.py
src/asr_cli/io/exporters/: __init__.py  json.py  srt.py  txt.py  vtt.py
src/asr_cli/pipeline/: __init__.py  combine.py  merge.py  orchestrator.py
src/asr_cli/providers/: __init__.py
src/asr_cli/providers/base/: __init__.py  asr.py  diarization.py  normalization.py  normalization_provider.py
src/asr_cli/providers/deepseek/: __init__.py  provider.py
src/asr_cli/providers/gigaam/: __init__.py  provider.py
src/asr_cli/providers/openai_compatible/: __init__.py  client.py
src/asr_cli/providers/openrouter/: __init__.py  provider.py
src/asr_cli/providers/pyannote/: __init__.py  provider.py
src/asr_cli/utils/: json.py  timecodes.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_combine.py  test_config.py  test_exporters.py  test_gigaam_provider.py  test_inputs.py  test_merge.py  test_normalization_client.py  test_openrouter_provider.py  test_timecodes.py
