[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-cli"
version = "0.1.0"
description = "CLI utility for transcription, diarization, and optional LLM normalization."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Aleksandr Zakordonets" }
]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13,<15",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0.0",
]
pyannote = [
  "pyannote.audio>=4.0",
  "torch>=2.8,<2.9",
  "torchaudio>=2.8,<2.9",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
asr-cli = "asr_cli.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["src"]